AARCH64: wrong encoding for exclusive and atomic load/stores

XMLWordPrintable

    • b24
    • aarch64

      According to specification, all loads and stores treats register number 31 as sp for base addressing register. Current hotspot encoding for exclusive and atomic load/stores can't accept sp as base addressing register and leads to assert. There is no such usage in hotspot so far, but adding new code with such usage is blocked.

            Assignee:
            Dmitrij Pochepko
            Reporter:
            Dmitrij Pochepko
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: