8214961: AARCH64: wrong encoding for exclusive and atomic load/stores

Reviewed-by: aph